add header link

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,6 +1,7 @@
 {
   "header": {
-    "main": "Arcade Controller Button Placement"
+    "main": "Arcade Controller Button Placement",
+    "buttonLayoutsLink": "Pro Player Button Layouts"
   },
   "footer": {
     "copyright": "© 2025 Arcade Controller Button Placement",
