--- a/i18n/locales/ja.json
+++ b/i18n/locales/ja.json
@@ -1,6 +1,7 @@
 {
   "header": {
-    "main": "アーケードコントローラーボタン配置"
+    "main": "アーケードコントローラーボタン配置",
+    "buttonLayoutsLink": "プロ選手のボタンレイアウト集"
   },
   "footer": {
     "copyright": "© 2025 アーケードコントローラーボタン配置",
